# feishu-kirocli-bot

./: .env.example  .gitignore  README.md  README.zh-CN.md  acp_client.py  bridge.py  config.py  feishu_bot.py  pyproject.toml
